2007-08-21  Wim Taymans  <wim.taymans@gmail.com>

	* sys/v4l/gstv4lsrc.c: (gst_v4lsrc_palette_to_caps):
	Fix RGB24 masks as spotted by _ke (Daniel G. Siegel) on IRC.

2007-08-21  Wim Taymans  <wim.taymans@gmail.com>

	* ext/vorbis/vorbisdec.c: (vorbis_dec_push_forward):
	When calculating the first timestamp of the buffers, don't go below 0
	and clip the samples because the offset was on the eos page.
	Fixes #466717.

2007-08-21  Wim Taymans  <wim.taymans@gmail.com>

	* ext/ogg/gstoggdemux.c: (gst_ogg_demux_read_chain),
	(gst_ogg_demux_collect_chain_info):
	Also submit the eos page when trying to find the first timestamp.
	See #466717.

2007-08-17  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst-libs/gst/audio/audio.h:
	Use gst_util_uint64_scale() instead of doing the math
	with double for GST_FRAMES_TO_CLOCK_TIME() and
	GST_CLOCK_TIME_TO_FRAMES(). For large timestamps this
	prevents rounding errors. Fixes #467667.

2007-08-17  Wim Taymans  <wim.taymans@gmail.com>

	* gst-libs/gst/rtsp/gstrtspconnection.c:
	(gst_rtsp_connection_connect), (gst_rtsp_connection_write),
	(gst_rtsp_connection_read), (gst_rtsp_connection_poll):
	* gst-libs/gst/rtsp/gstrtspconnection.h:
	Small cleanups.
	On shutdown, don't read the control socket yet.
	Set timeout value correctly in all cases.
	Add function to check if the server accepts reads or writes.
	API: gst_rtsp_connection_poll()

	* gst-libs/gst/rtsp/gstrtspdefs.h:
	Fix compilation with -pedantic.
	Add enum for _poll.

2007-08-16  Wim Taymans  <wim.taymans@gmail.com>

	Patch by: Olivier Crete  <tester at tester ca>

	* gst-libs/gst/rtp/gstbasertppayload.c: (gst_basertppayload_init),
	(gst_basertppayload_getcaps):
	* gst-libs/gst/rtp/gstbasertppayload.h:
	Add getcaps vfunc to basertppayload. See #465146.

2007-08-16  Wim Taymans  <wim.taymans@gmail.com>

	* gst/playback/gstplaybasebin.c: (queue_threshold_reached):
	Only post buffering messages when we are a stream.

2007-08-15  Tim-Philipp Müller  <tim at centricular dot net>
