@@ -1,3 +1,9 @@
+2007-08-22  Stefan Kost  <ensonic@users.sf.net>
+
+	* gst/volume/gstvolume.c:
+	  Enable liboil for float and add more details about problems with
+	  int16.
+
 2007-08-21  Wim Taymans  <wim.taymans@gmail.com>
 
 	* sys/v4l/gstv4lsrc.c: (gst_v4lsrc_palette_to_caps):
